<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/ipText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text="Device IP"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:text=""
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/button_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Connect" />

                <Button
                    android:id="@+id/button_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Password" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear" />


            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_11"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text11" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_12"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text12"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_13"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text13" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_14"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text14" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_15"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text15" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_21"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text21" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_22"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text22" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_23"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text23" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_24"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text24" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_25"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text25" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_31"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text31" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_32"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text32" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_33"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text33" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_34"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text34" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_35"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text35" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_41"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text41" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_42"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text42" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_43"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text43" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_44"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text44" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_45"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text45" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_51"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text51" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_52"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text52" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_53"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text53" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_54"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text54" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_55"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text55" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_61"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text61" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_62"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text62" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_63"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text63" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_64"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text64" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/text_lower_65"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/text65" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>